==> iNavFlight/inav/lib/main/ChibiOS/community/os/hal/ports/TIVA/LLD/SSI/hal_spi_lld.c <==
#include "ch.h"
#include "hal.h"

void spi_lld_start(SPIDriver *spip)
{
  if (spip->state == SPI_STOP) {
    /* Clock activation.*/
#if TIVA_SPI_USE_SSI0
    if (&SPID1 == spip) {
      bool b;
      b = udmaChannelAllocate(spip->dmarxnr);
      osalDbgAssert(!b, "channel already allocated");
      b = udmaChannelAllocate(spip->dmatxnr);
      osalDbgAssert(!b, "channel already allocated");

      /* Enable SSI0 module.*/
      HWREG(SYSCTL_RCGCSSI) |= (1 << 0);
      while (!(HWREG(SYSCTL_PRSSI) & (1 << 0)))
        ;

      nvicEnableVector(TIVA_SSI0_NUMBER, TIVA_SPI_SSI0_IRQ_PRIORITY);
    }
#endif
#if TIVA_SPI_USE_SSI1
    if (&SPID2 == spip) {
      bool b;
      b = udmaChannelAllocate(spip->dmarxnr);
      osalDbgAssert(!b, "channel already allocated");
      b = udmaChannelAllocate(spip->dmatxnr);
      osalDbgAssert(!b, "channel already allocated");

      /* Enable SSI0 module.*/
      HWREG(SYSCTL_RCGCSSI) |= (1 << 1);
      while (!(HWREG(SYSCTL_PRSSI) & (1 << 1)))
        ;

      nvicEnableVector(TIVA_SSI1_NUMBER, TIVA_SPI_SSI1_IRQ_PRIORITY);
    }
#endif
#if TIVA_SPI_USE_SSI2
    if (&SPID2 == spip) {
      bool b;
      b = udmaChannelAllocate(spip->dmarxnr);
      osalDbgAssert(!b, "channel already allocated");
      b = udmaChannelAllocate(spip->dmatxnr);
      osalDbgAssert(!b, "channel already allocated");

      /* Enable SSI0 module.*/
      HWREG(SYSCTL_RCGCSSI) |= (1 << 2);
      while (!(HWREG(SYSCTL_PRSSI) & (1 << 2)))
        ;

      nvicEnableVector(TIVA_SSI2_NUMBER, TIVA_SPI_SSI2_IRQ_PRIORITY);
    }
#endif
#if TIVA_SPI_USE_SSI3
    if (&SPID2 == spip) {
      bool b;
      b = udmaChannelAllocate(spip->dmarxnr);
      osalDbgAssert(!b, "channel already allocated");
      b = udmaChannelAllocate(spip->dmatxnr);
      osalDbgAssert(!b, "channel already allocated");

      /* Enable SSI0 module.*/
      HWREG(SYSCTL_RCGCSSI) |= (1 << 3);
      while (!(HWREG(SYSCTL_PRSSI) & (1 << 3)))
        ;

      nvicEnableVector(TIVA_SSI3_NUMBER, TIVA_SPI_SSI3_IRQ_PRIORITY);
    }
#endif

    HWREG(UDMA_CHMAP0 + (spip->dmarxnr / 8) * 4) |= (spip->rxchnmap << (spip->dmarxnr % 8));
    HWREG(UDMA_CHMAP0 + (spip->dmatxnr / 8) * 4) |= (spip->txchnmap << (spip->dmatxnr % 8));
  }
  /* Set master operation mode.*/
  HWREG(spip->ssi + SSI_O_CR1) = 0;

  /* Clock configuration - System Clock.*/
  HWREG(spip->ssi + SSI_O_CC) = 0;

  /* Clear pending interrupts.*/
  HWREG(spip->ssi + SSI_O_ICR) = SSI_ICR_RTIC | SSI_ICR_RORIC;

  /* Enable Receive Time-Out and Receive Overrun Interrupts.*/
  HWREG(spip->ssi + SSI_O_IM) = SSI_IM_RTIM | SSI_IM_RORIM;

  /* Configure the clock prescale divisor.*/
  HWREG(spip->ssi + SSI_O_CPSR) = spip->config->cpsr;

  /* Serial clock rate, phase/polarity, data size, fixed SPI frame format.*/
  HWREG(spip->ssi + SSI_O_CR0) = (spip->config->cr0 & ~SSI_CR0_FRF_M) | SSI_CR0_FRF_MOTO;

  /* Enable SSI.*/
  HWREG(spip->ssi + SSI_O_CR1) |= SSI_CR1_SSE;

  /* Enable RX and TX DMA channels.*/
  HWREG(spip->ssi + SSI_O_DMACTL) = (SSI_DMACTL_TXDMAE | SSI_DMACTL_RXDMAE);
}

void spi_lld_stop(SPIDriver *spip)
{
  if (spip->state != SPI_STOP) {
    HWREG(spip->ssi + SSI_O_CR1) = 0;
    HWREG(spip->ssi + SSI_O_CR0) = 0;
    HWREG(spip->ssi + SSI_O_CPSR) = 0;

    udmaChannelRelease(spip->dmarxnr);
    udmaChannelRelease(spip->dmatxnr);

#if TIVA_SPI_USE_SSI0
    if (&SPID1 == spip) {
      nvicDisableVector(TIVA_SSI0_NUMBER);
    }
#endif
#if TIVA_SPI_USE_SSI1
    if (&SPID2 == spip) {
      nvicDisableVector(TIVA_SSI1_NUMBER);
    }
#endif
#if TIVA_SPI_USE_SSI2
    if (&SPID3 == spip) {
      nvicDisableVector(TIVA_SSI2_NUMBER);
    }
#endif
#if TIVA_SPI_USE_SSI3
    if (&SPID4 == spip) {
      nvicDisableVector(TIVA_SSI3_NUMBER);
    }
#endif
  }
}

uint16_t spi_lld_polled_exchange(SPIDriver *spip, uint16_t frame)
{
  HWREG(spip->ssi + SSI_O_DR) = (uint32_t)frame;
  while ((HWREG(spip->ssi + SSI_O_SR) & SSI_SR_RNE) == 0)
    ;
  return (uint16_t)HWREG(spip->ssi + SSI_O_DR);
}
